...

  @override
  State<RegisterPage> createState() => _RegisterPageState();
}

class _RegisterPageState extends State<RegisterPage> {
  static const Key nameInputKey = Key('register_name_input');
  static const Key emailInputKey = Key('register_email_input');
  static const Key phoneInputKey = Key('register_phone_input');
  static const Key passwordInputKey = Key('register_password_input');
  static const Key registerButtonKey = Key('register_submit_button');

  final _formKey = GlobalKey<FormState>();
  final emailController = TextEditingController();
  final passwordController = TextEditingController();
  final confirmPasswordController = TextEditingController();
  final nameController = TextEditingController();
...
