...

  @override
  State<LoginPage> createState() => _LoginPageState();
}

class _LoginPageState extends State<LoginPage> {
  static const Key emailInputKey = Key('login_email_input');
  static const Key passwordInputKey = Key('login_password_input');
  static const Key loginButtonKey = Key('login_submit_button');

  final _formKey = GlobalKey<FormState>();
  final emailController = TextEditingController();
  final passwordController = TextEditingController();
  bool _obscurePassword = true; // State to toggle password visibility

...
